test/library/standard/Random/noParSafeInit.good
noParSafeInit.chpl:3: error: 'parSafe' field must be specified to initialize a 'randomStream'
