test/library/standard/Random/noParSafeInit.chpl
use Random;

var rs = new randomStream(int, seed=123);
